--- a/MarathonSkills.WpfApp/Pages/RunnerSponsor.xaml
+++ b/MarathonSkills.WpfApp/Pages/RunnerSponsor.xaml
@@ -29,10 +29,10 @@
 					</StackPanel>
 					<StackPanel Orientation="Horizontal" Margin="0 10 0 0" HorizontalAlignment="Right">
 						<Label Content="Бегун: " Style="{DynamicResource DarkGrayLabel}"/>
-						<ListBox x:Name="RunnersLB" Width="200"/>
+						<ComboBox x:Name="RunnersCB" Width="200" ItemsSource="{Binding Path=RunnersExts}"/>
 					</StackPanel>
 					<StackPanel Orientation="Horizontal" Margin="0 10 0 0" HorizontalAlignment="Right">
-						<Label Content="Влад-ц карты: " Style="{DynamicResource DarkGrayLabel}"/>
+						<Label Content="Влад-ц карты: " Style="{DynamicResource DarkGrayLabel}" ToolTip="Владелец карты"/>
 						<TextBox Text=""/>
 					</StackPanel>
 					<StackPanel Orientation="Horizontal" Margin="0 10 0 0" HorizontalAlignment="Right">
@@ -65,7 +65,7 @@
 						<Button x:Name="PlusButton" Content="+" FontSize="18" Padding="0" Width="30" Height="Auto" FontWeight="Bold" Style="{DynamicResource SmallButton}" Click="PlusButton_Click"/>
 					</StackPanel>
 					<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 40 0 0">
-						<Button Content="Заплатить" Style="{DynamicResource SmallButton}" Width="90" FontWeight="DemiBold"/>
+						<Button Content="Заплатить" Style="{DynamicResource SmallButton}" Width="90" FontWeight="DemiBold" Click="PayButton_Click"/>
 						<Button Content="Отмена" Style="{DynamicResource SmallButton}" Width="80" FontWeight="DemiBold" Margin="15 0 0 0"/>
 					</StackPanel>
 				</StackPanel>
