--- a/MarathonSkills.WpfApp/App.xaml
+++ b/MarathonSkills.WpfApp/App.xaml
@@ -4,6 +4,9 @@
              xmlns:local="clr-namespace:MarathonSkills.WpfApp"
              StartupUri="Windows/MainWindow.xaml">
     <Application.Resources>
+		<Style TargetType="Label">
+			<Setter Property="FontFamily" Value="Open Sans"/>
+		</Style>
         <Style TargetType="TextBox">
             <Setter Property="FontFamily" Value="Open Sans"/>
             <Setter Property="FontWeight" Value="Light"/>
