--- a/MarathonSkills.WpfApp/Pages/EventInfoMenuPage.xaml
+++ b/MarathonSkills.WpfApp/Pages/EventInfoMenuPage.xaml
@@ -18,7 +18,7 @@
             <StackPanel Orientation="Horizontal" Margin="0 12 0 0">
                 <Button Content="Предыдущие&#xD;&#xA;результаты" Style="{DynamicResource BigButton}" FontStyle="Italic" Width="230"  Height="75"/>
                 <Button Content="           Список&#xD;&#xA;благотворительных&#xD;&#xA;      организаций" Style="{DynamicResource BigButton}" FontStyle="Italic" Width="230" 
-                        Margin="12 0 0 0"  Height="75"/>
+                        Margin="12 0 0 0"  Height="75" Click="CharityListButton_Click"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0 12 0 0">
                 <Button Content="BMI калькулятор" Style="{DynamicResource BigButton}" FontStyle="Italic" Width="230"  Height="75"/>
