--- a/MarathonSkills.WpfApp/Pages/SponsorshipConfirmationPage.xaml
+++ b/MarathonSkills.WpfApp/Pages/SponsorshipConfirmationPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:MarathonSkills.WpfApp.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="SponsorshipConfirmationPage">
+      Title="Подтверждение спонсорства">
 
     <Grid>
 		<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
