--- a/MarathonSkills.WpfApp/Windows/MainWindow.xaml
+++ b/MarathonSkills.WpfApp/Windows/MainWindow.xaml
@@ -4,7 +4,7 @@
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:local="clr-namespace:MarathonSkills.WpfApp"
-		mc:Ignorable="d"
+		mc:Ignorable="d" WindowStartupLocation="CenterScreen"
 		Title="Marathon Skills 2020" Height="520" Width="800" KeyDown="Window_KeyDown">
 	<Grid x:Name="MainGrid">
 		<Grid.RowDefinitions>
