upd: RunnerSponsor Доделал 1.7 и 1.8

--- a/MarathonSkills.WpfApp/Pages/RunnerSponsor.xaml
+++ b/MarathonSkills.WpfApp/Pages/RunnerSponsor.xaml
@@ -29,7 +29,7 @@
 					</StackPanel>
 					<StackPanel Orientation="Horizontal" Margin="0 10 0 0" HorizontalAlignment="Right">
 						<Label Content="Бегун: " Style="{DynamicResource DarkGrayLabel}"/>
-						<ComboBox x:Name="RunnersCB" Width="200" ItemsSource="{Binding Path=RunnersExts}"/>
+						<ComboBox x:Name="RunnersCB" Width="200" ItemsSource="{Binding Path=RunnersExts}" SelectionChanged="RunnersCB_SelectionChanged"/>
 					</StackPanel>
 					<StackPanel Orientation="Horizontal" Margin="0 10 0 0" HorizontalAlignment="Right">
 						<Label Content="Влад-ц карты: " Style="{DynamicResource DarkGrayLabel}" ToolTip="Владелец карты"/>
@@ -54,13 +54,13 @@
 				<StackPanel Margin="50 0 0 0" HorizontalAlignment="Center">
 					<Label Content="Благотворительность" Style="{DynamicResource GrayHeader}" FontSize="18" HorizontalAlignment="Center"/>
 					<StackPanel Orientation="Horizontal">
-						<Label x:Name="CharityNameLabel" Content="Фонд Кошек" FontSize="16" Margin="35 0 0 0"/>
-						<Image Source="/Images/outline_info_black_24dp.png" Margin="20 0 0 0" MouseLeftButtonDown="ShowCharityInfo" Cursor="Hand"/>
+						<Label x:Name="CharityNameLabel" Content="Выберите бегуна" FontSize="16" Margin="35 0 0 0"/>
+						<Image Source="/Images/outline_info_black_24dp.png" Margin="20 0 0 0" MouseLeftButtonDown="ShowCharityInfo" Cursor="Hand" ToolTip="Информация о благотворительной организации."/>
 					</StackPanel>
 					<Label Content="Сумма пожертвования" Style="{DynamicResource GrayHeader}" FontSize="18" HorizontalAlignment="Center" Margin="0 20 0 0"/>
 					<Label x:Name="SumLabel" Content="$50" HorizontalAlignment="Center" FontSize="50" Foreground="Gray" FontWeight="DemiBold" Padding="0"/>
-					<StackPanel Orientation="Horizontal" Height="25" Margin="0 8 0 0">
-						<Button x:Name="MinusButton" Margin="30 0 0 0" Content="-" FontSize="18" Padding="0" Width="30" Height="25" FontWeight="Bold" Style="{DynamicResource SmallButton}" Click="MinusButton_Click"/>
+					<StackPanel Orientation="Horizontal" Height="25" Margin="0 8 0 0" HorizontalAlignment="Center">
+						<Button x:Name="MinusButton" Content="-" FontSize="18" Padding="0" Width="30" Height="25" FontWeight="Bold" Style="{DynamicResource SmallButton}" Click="MinusButton_Click"/>
 						<TextBox x:Name="SumTB" Width="70" Margin="8 0" FontSize="14" Text="50" HorizontalContentAlignment="Center" TextChanged="SumTB_TextChanged" PreviewTextInput="NumberTB_PreviewTextInput"/>
 						<Button x:Name="PlusButton" Content="+" FontSize="18" Padding="0" Width="30" Height="Auto" FontWeight="Bold" Style="{DynamicResource SmallButton}" Click="PlusButton_Click"/>
 					</StackPanel>
