--- a/MarathonSkills.WpfApp/Windows/CharityInfoWindow.xaml
+++ b/MarathonSkills.WpfApp/Windows/CharityInfoWindow.xaml
@@ -5,13 +5,13 @@
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:local="clr-namespace:MarathonSkills.WpfApp.Windows"
 		mc:Ignorable="d"
-		Title="Благотворительная организация" Height="350" Width="500" ResizeMode="NoResize">
+		Title="Благотворительная организация" Height="458" Width="710" ResizeMode="NoResize">
 	<Grid>
 		<StackPanel HorizontalAlignment="Center">
-			<Label x:Name="HeaderLabel" Content="Sample Text" FontSize="20" HorizontalAlignment="Center"/>
+			<Label x:Name="HeaderLabel" Content="Ошибка" FontSize="20" HorizontalAlignment="Center"/>
 			<Image x:Name="Logo" Margin="0 15" VerticalAlignment="Center" Height="90" Source="/Images/outline_info_black_24dp.png"/>
-			<ScrollViewer VerticalScrollBarVisibility="Auto">
-				<TextBlock x:Name="DercriptionTB" Width="430" Height="150" TextWrapping="Wrap" FontSize="16" Text="sdf;ljhds fjsdhosdhfo hsdpof sdpf hsdpfo hsdopfh sdipjfh dsiph fsdjh flkjsdhfl jdshfjsdhfl jdshfjdshkfjsdhlkfj hsdkfjhdsklfj dshf dsfklsdh fklds hfjkdsh fklsjdh ljhds fjsdhosdhfo hsdpof sdpf hsdpfo hsdopfh sdipjfh dsiph fsdjh flkjsdhfl jdshfjsdhfl jdshfjdshkfjsdhlkfj hsdkfjhdsklfj dshf dsfklsdh fklds hfjkdsh fklsjdh ljhds fjsdhosdhfo hsdpof sdpf hsdpfo hsdopfh sdipjfh dsiph fsdjh flkjsdhfl jdshfjsdhfl jdshfjdshkfjsdhlkfj hsdkfjhdsklfj dshf dsfklsdh fklds hfjkdsh fklsjdh ljhds fjsdhosdhfo hsdpof sdpf hsdpfo hsdopfh sdipjfh dsiph fsdjh flkjsdhfl jdshfjsdhfl jdshfjdshkfjsdhlkfj hsdkfjhdsklfj dshf dsfklsdh fklds hfjkdsh fklsjdh ljhds fjsdhosdhfo hsdpof sdpf hsdpfo hsdopfh sdipjfh dsiph fsdjh flkjsdhfl jdshfjsdhfl jdshfjdshkfjsdhlkfj hsdkfjhdsklfj dshf dsfklsdh fklds hfjkdsh fklsjdh"/>
+			<ScrollViewer VerticalScrollBarVisibility="Auto" Height="260">
+				<TextBlock x:Name="DercriptionTB" Width="650" TextWrapping="Wrap" FontSize="16" Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius quam quisque id diam vel quam. Euismod lacinia at quis risus sed vulputate. Tincidunt eget nullam non nisi est sit amet facilisis. Tristique senectus et netus et malesuada fames ac turpis. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum dui. Mi eget mauris pharetra et ultrices neque ornare aenean euismod. Mi tempus imperdiet nulla malesuada pellentesque elit eget gravida. A iaculis at erat pellentesque adipiscing commodo. Erat velit scelerisque in dictum non. Eros in cursus turpis massa tincidunt. Netus et malesuada fames ac turpis egestas. Tellus elementum sagittis vitae et leo. Hac habitasse platea dictumst quisque sagittis purus sit amet volutpat. Lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. Volutpat ac tincidunt vitae semper quis. Dui ut ornare lectus sit amet est placerat in egestas. Ipsum nunc aliquet bibendum enim. Vel turpis nunc eget lorem dolor sed viverra ipsum. Eget arcu dictum varius duis at consectetur lorem donec massa."/>
 			</ScrollViewer>
 		</StackPanel>
 	</Grid>
