--- a/MarathonSkills.WpfApp/Windows/MainWindow.xaml
+++ b/MarathonSkills.WpfApp/Windows/MainWindow.xaml
@@ -28,11 +28,14 @@
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="70"/>
 				<ColumnDefinition/>
+				<ColumnDefinition Width="70"/>
 			</Grid.ColumnDefinitions>
 			<Button Width="53" Height="25" Content="Назад" Click="FrameGoBack_Click" Style="{DynamicResource BackButton}"/>
 			<Label Grid.Column="1" Content="MARATHON SKILLS 2020" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20 2 0 0" FontSize="20" 
 				   Style="{DynamicResource WhiteHeaderLabel}"/>
 		</Grid>
+		<Button x:Name="LogoutButton" Grid.Column="2" Width="53" Height="25" Content="Logout" Click="LogoutButton_Click" 
+				Style="{DynamicResource BackButton}" Visibility="Hidden" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0 10 8.5 0"/>
 		<!--Body-->
 		<Grid x:Name="BodyGrid" Grid.Row="1">
 			<Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" Navigated="MainFrame_Navigated"/>
