--- a/MarathonSkills.WpfApp/Pages/CoordinatorMenuPage.xaml
+++ b/MarathonSkills.WpfApp/Pages/CoordinatorMenuPage.xaml
@@ -9,6 +9,12 @@
       Title="Меню координатора">
 
     <Grid>
-        
-    </Grid>
+		<StackPanel Margin="0 0 0 194" HorizontalAlignment="Center" VerticalAlignment="Center">
+			<Label Content="Меню координатора" Style="{DynamicResource GrayHeader}" HorizontalAlignment="Center" Margin="0 0 0 25"/>
+			<StackPanel Orientation="Horizontal">
+				<Button Content="Бегуны" Style="{DynamicResource BigButton}" FontStyle="Italic" Width="230" Height="75"/>
+				<Button Content="Спонсоры" Style="{DynamicResource BigButton}" FontStyle="Italic" Width="230" Margin="12 0 0 0"  Height="75"/>
+			</StackPanel>
+		</StackPanel>
+	</Grid>
 </Page>
