--- a/MarathonSkills.WpfApp/Pages/RunnerMenuPage.xaml
+++ b/MarathonSkills.WpfApp/Pages/RunnerMenuPage.xaml
@@ -21,7 +21,7 @@
                         Margin="12 0 0 0"  Height="75"/>
 			</StackPanel>
 			<StackPanel Orientation="Horizontal" Margin="0 12 0 0">
-				<Button Content="Контакты" Style="{DynamicResource BigButton}" FontStyle="Italic" Width="230"  Height="75"/>
+				<Button Content="Контакты" Style="{DynamicResource BigButton}" FontStyle="Italic" Width="230"  Height="75" Click="ContactsButton_Click"/>
 			</StackPanel>
 		</StackPanel>
 	</Grid>
