--- a/MarathonSkills.WpfApp/App.xaml
+++ b/MarathonSkills.WpfApp/App.xaml
@@ -16,6 +16,11 @@
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="Padding" Value="0 4 0 0"/>
         </Style>
+		<Style TargetType="ComboBox">
+			<Setter Property="FontFamily" Value="Open Sans"/>
+			<Setter Property="FontSize" Value="14"/>
+			<Setter Property="Padding" Value="4"/>
+		</Style>
         <Style x:Key="WhiteHeaderLabel" TargetType="{x:Type Label}">
             <Setter Property="Foreground" Value="White"/>
             <Setter Property="FontSize" Value="28"/>
