--- a/MarathonSkills.WpfApp/App.xaml
+++ b/MarathonSkills.WpfApp/App.xaml
@@ -271,7 +271,31 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        <Style x:Key="DarkGrayLabel" TargetType="{x:Type Label}">
+		<Style x:Key="LightGrayHeader" TargetType="{x:Type Label}">
+			<Setter Property="FontSize" Value="20"/>
+			<Setter Property="Foreground" Value="#999999"/>
+			<Setter Property="FontFamily" Value="Open Sans"/>
+			<Setter Property="FontWeight" Value="SemiBold"/>
+			<Setter Property="Background" Value="Transparent"/>
+			<Setter Property="Padding" Value="5"/>
+			<Setter Property="HorizontalContentAlignment" Value="Left"/>
+			<Setter Property="VerticalContentAlignment" Value="Top"/>
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type Label}">
+						<Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="true">
+							<ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+						</Border>
+						<ControlTemplate.Triggers>
+							<Trigger Property="IsEnabled" Value="false">
+								<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+							</Trigger>
+						</ControlTemplate.Triggers>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
+		<Style x:Key="DarkGrayLabel" TargetType="{x:Type Label}">
             <Setter Property="Foreground" Value="#474747"/>
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontFamily" Value="Open Sans"/>
