--- a/MarathonSkills.WpfApp/Pages/RunnerRegistrationPage.xaml
+++ b/MarathonSkills.WpfApp/Pages/RunnerRegistrationPage.xaml
@@ -6,7 +6,7 @@
 	  xmlns:local="clr-namespace:MarathonSkills.WpfApp.Pages"
 	  mc:Ignorable="d" 
 	  d:DesignHeight="450" d:DesignWidth="800"
-	  Title="RunnerRegistrationPage">
+	  Title="Регистрация бегуна">
 
 	<Grid>
 		<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
