--- a/MarathonSkills.WpfApp/Pages/EventRegisterPage.xaml
+++ b/MarathonSkills.WpfApp/Pages/EventRegisterPage.xaml
@@ -1,14 +1,14 @@
 ﻿<Page x:Class="MarathonSkills.WpfApp.Pages.EventRegisterPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:MarathonSkills.WpfApp.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Регистрация на марафон">
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+	  xmlns:local="clr-namespace:MarathonSkills.WpfApp.Pages"
+	  mc:Ignorable="d" 
+	  d:DesignHeight="450" d:DesignWidth="800"
+	  Title="Регистрация на марафон">
 
-    <Grid>
+	<Grid>
 		<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
 			<Label Content="Регистрация на марафон" Style="{DynamicResource GrayHeader}" HorizontalAlignment="Center"/>
 			<Label Content="Пожалуйста заполните всю информацию, чтобы зарегистрироваться на Skills &#xD;&#xA;        Marathon 2016 проводимом в Москве. Russia. С вами свяжутся после&#xD;&#xA;                регистрации для уточнения оплаты и другой информации." 
@@ -21,22 +21,22 @@
 							<Style TargetType="CheckBox">
 								<Setter Property="FontSize" Value="14"/>
 								<Setter Property="Margin" Value="0 3"/>
-								<Setter Property="Width" Value="210"/>
+								<Setter Property="Width" Value="220"/>
 							</Style>
 						</StackPanel.Resources>
-						<CheckBox Content="42km Полный марафон($145)"/>
-						<CheckBox Content="21km Полумарафон ($75)"/>
-						<CheckBox Content="5km Малая дистанция ($20)"/>
+						<CheckBox Content="42km Полный марафон ($145)" Checked="CheckBox_CheckedUnchecked" Unchecked="CheckBox_CheckedUnchecked" Tag="145"/>
+						<CheckBox Content="21km Полумарафон ($75)" Checked="CheckBox_CheckedUnchecked" Unchecked="CheckBox_CheckedUnchecked" Tag="75"/>
+						<CheckBox Content="5km Малая дистанция ($20)" Checked="CheckBox_CheckedUnchecked" Unchecked="CheckBox_CheckedUnchecked" Tag="20"/>
 					</StackPanel>
 					<Label Content="Детали спонсорства" Style="{DynamicResource LightGrayHeader}" FontSize="18" HorizontalAlignment="Center" Margin="0 10 0 5"/>
 					<StackPanel Orientation="Horizontal" Margin="0 10 0 0" HorizontalAlignment="Right">
 						<Label Content="Взнос: " Style="{DynamicResource DarkGrayLabel}"/>
-						<ComboBox x:Name="CharityCB" Width="160"/>
-						<Image Source="/Images/outline_info_black_24dp.png" Margin="5 0 0 0"/>
+						<ComboBox x:Name="CharityCB" Width="160" ItemsSource="{Binding Path=Charities}"/>
+						<Image Source="/Images/outline_info_black_24dp.png" Margin="5 0 0 0" MouseLeftButtonDown="ShowCharityInfo" Cursor="Hand" ToolTip="Информация о благотворительной организации."/>
 					</StackPanel>
 					<StackPanel Orientation="Horizontal" Margin="0 10 29 0" HorizontalAlignment="Right">
-						<Label Content="Сумма: " Style="{DynamicResource DarkGrayLabel}"/>
-						<TextBox x:Name="SumTB" Width="160"/>
+						<Label Content="Сумма взноса: " Style="{DynamicResource DarkGrayLabel}"/>
+						<TextBox x:Name="SumTB" Text="5" Width="160" PreviewTextInput="NumberTB_PreviewTextInput" TextChanged="SumTB_TextChanged"/>
 					</StackPanel>
 					<StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="20 20 0 0">
 						<Button Style="{DynamicResource SmallButton}" Content="Регистрация" Width="100" Click="RegistrationButton_Click"/>
@@ -53,12 +53,12 @@
 					</StackPanel.Resources>
 					<Label Content="Варианты комплектов" Style="{DynamicResource LightGrayHeader}" FontSize="18" HorizontalAlignment="Center"/>
 					<StackPanel x:Name="ComplectsRBs">
-						<RadioButton Content="Вариант A ($0): Номер бегуна +&#xD;&#xA;RFID браслет."/>
-						<RadioButton Content="Вариант B ($20): Вариант A + &#xD;&#xA;бейсболка + бутылка воды."/>
-						<RadioButton Content="Вариант C ($45): Вариант B +&#xD;&#xA;футболка + сувенирный буклет."/>
+						<RadioButton Content="Вариант A ($0): Номер бегуна +&#xD;&#xA;RFID браслет." Checked="CheckBox_CheckedUnchecked" Unchecked="CheckBox_CheckedUnchecked" Tag="0"/>
+						<RadioButton Content="Вариант B ($20): Вариант A + &#xD;&#xA;бейсболка + бутылка воды." Checked="CheckBox_CheckedUnchecked" Unchecked="CheckBox_CheckedUnchecked" Tag="20"/>
+						<RadioButton Content="Вариант C ($45): Вариант B +&#xD;&#xA;футболка + сувенирный буклет." Checked="CheckBox_CheckedUnchecked" Unchecked="CheckBox_CheckedUnchecked" Tag="45"/>
 					</StackPanel>
-					<Label Content="Регистрационный взнос" Style="{DynamicResource LightGrayHeader}" FontSize="18" HorizontalAlignment="Center" Margin="0 15 0 0"/>
-					<Label x:Name="AllSumLabel" Content="$0" HorizontalAlignment="Center" FontSize="50" Foreground="#999999" FontWeight="DemiBold" Padding="0"/>
+					<Label Content="Регистрационный взнос" Style="{DynamicResource LightGrayHeader}" FontSize="18" HorizontalAlignment="Center" Margin="0 15 0 5"/>
+					<Label x:Name="AllSumLabel" Content="$5" HorizontalAlignment="Center" FontSize="50" Foreground="#999999" FontWeight="DemiBold" Padding="0"/>
 				</StackPanel>
 			</StackPanel>
 		</StackPanel>
