--- a/MarathonSkills.WpfApp/Pages/RegistrationPages/RunnerRegistrationPage.xaml
+++ b/MarathonSkills.WpfApp/Pages/RegistrationPages/RunnerRegistrationPage.xaml
@@ -80,7 +80,7 @@
 			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 15 0 0">
 				<Button Style="{DynamicResource SmallButton}" Content="Регистрация" Width="100" Click="RegistrationButton_Click"/>
 				<Button Style="{DynamicResource SmallButton}" Content="Отмена" Width="70" Margin="15 0 0 0" Click="CancelButton_Click"/>
-				<Button Content="ДАЛЕЕ" Click="DebugButton_Click"/>
+				<!--<Button Content="ДАЛЕЕ" Click="DebugButton_Click"/>-->
 			</StackPanel>
 		</StackPanel>
 	</Grid>
